# lou-op

./: .env.example  .gitignore  PRD.md  PRD_refactor.md  README.md  RUNBOOK.md  pyproject.toml  setup.cfg  tasks.dogfood.yaml  tasks.example.yaml  tox.ini
.githooks/: pre-commit
.github/workflows/: ci.yml
.lou-op/: progress.md
lou_op/: __init__.py  api.py  audit.py  bench.py  cli.py  config.py  exec.py  git_ops.py  judge.py  logutil.py  loop.py  modal_runtime.py  models.py  orchestrator.py  ping.py  prd.py  progress.py  prompts.py  protocol.py  runtime.py  state.py  validators.py  workspace.py
lou_op/adapters/: __init__.py  provider_openai.py  store_sqlite.py  workspace_docker.py  workspace_host.py  workspace_modal.py
lou_op/backends/: __init__.py  agent_cli.py  base.py  extractor.py  mock.py  native_agent.py  providers.py  raw_api.py  registry.py
lou_op/domain/: __init__.py  graph.py  iteration.py  scope.py  verification.py
tests/: conftest.py  test_api.py  test_audit.py  test_bench.py  test_depends_on.py  test_domain.py  test_env_scrub.py  test_import_boundaries.py  test_job_timeout.py  test_loop.py  test_modal_runtime.py  test_native_agent.py  test_orchestrator.py  test_parallel_dag.py  test_path_jail.py  test_ping.py  test_prd.py  test_progress_patterns.py  test_protected_files.py  test_protocol.py  test_provider.py  test_require_validators.py  test_resume.py  test_runtime_docker.py  test_runtime_plugin.py  test_scope_revert.py  test_state.py  test_store.py  test_validators.py  test_workspace.py  test_workspace_adapters.py  test_workspace_contract.py
(+4 files in other folders)
