[project]
name = "lou-op"
version = "0.1.0"
description = "Async code generation via Ralph loops. Shout out to Lou."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.4.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "mypy>=1.9.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
lou-op = "lou_op.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lou_op"]

[tool.black]
line-length = 88
target-version = ["py311"]
exclude = '''
/(
    \.venv
  | \.git
  | __pycache__
  | \.lou-op-jobs
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip = [".venv", ".git", "__pycache__", ".lou-op-jobs"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_incomplete_defs = true
warn_redundant_casts = true
exclude = ["tests/", "\\.lou-op-jobs/", "build/", "dist/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
